[gd_scene load_steps=3 format=3 uid="uid://bdnai1xmnu06p"]

[ext_resource type="Script" uid="uid://bo4b6u3y4axp0" path="res://panels/template/content_panel.gd" id="1_l46ha"]
[ext_resource type="Script" uid="uid://cidv8qaw5mesn" path="res://panels/template/mode_option_button.gd" id="3_v8kn5"]

[node name="Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l46ha")

[node name="Content" type="MarginContainer" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ContentPanelMarginContainer"

[node name="SplitButtonTopLeft" type="Button" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
focus_mode = 1
flat = true

[node name="SplitButtonBottomLeft" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 16.0
grow_vertical = 0
focus_mode = 1
flat = true

[node name="SplitButtonTopRight" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 16.0
grow_horizontal = 0
focus_mode = 1
flat = true

[node name="SplitButtonBottomRight" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 1
flat = true

[node name="SplitPreview" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Split1" type="Panel" parent="SplitPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PreviewPanel"

[node name="Split2" type="Panel" parent="SplitPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PreviewPanel"

[node name="ModeOptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -28.0
offset_right = 40.0
offset_bottom = -3.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 0)
clip_text = true
expand_icon = true
selected = 0
fit_to_longest_item = false
allow_reselect = true
item_count = 2
popup/item_0/id = 0
popup/item_1/id = 1
script = ExtResource("3_v8kn5")

[connection signal="gui_input" from="SplitButtonTopLeft" to="." method="_on_split_button_input"]
[connection signal="gui_input" from="SplitButtonBottomLeft" to="." method="_on_split_button_input"]
[connection signal="gui_input" from="SplitButtonTopRight" to="." method="_on_split_button_input"]
[connection signal="gui_input" from="SplitButtonBottomRight" to="." method="_on_split_button_input"]
